<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonclear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:onClick="effacerDessin"
            android:padding="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/clear"
            android:textSize="12sp"
            app:backgroundTint="#A3A3A3" />

        <Button
            android:id="@+id/buttonCurve"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:onClick="selectionnerCourbe"
            android:padding="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/curve"
            android:textSize="12sp"
            app:backgroundTint="#616161" />

        <Button
            android:id="@+id/buttonLine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:onClick="selectionnerLigne"
            android:padding="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/line"
            android:textSize="12sp"
            app:backgroundTint="#A3A3A3" />

        <Button
            android:id="@+id/buttonRectangle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:onClick="selectionnerRectangle"
            android:padding="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/rectangle"
            android:textSize="12sp"
            app:backgroundTint="#A3A3A3" />

        <Button
            android:id="@+id/buttonColor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:onClick="changeColorButton"
            android:padding="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="@string/color"
            android:textSize="12sp"
            app:backgroundTint="#A3A3A3" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/scene"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>