<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ColorSelectionActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/red"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/red"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/green"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/green"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/blue"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/blue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <FrameLayout
        android:id="@+id/colorPreview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#000000">

    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/validateColor"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:onClick="validateColor"
        android:text="@string/validate" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:onClick="resetValue"
        android:text="@string/reset" />

</LinearLayout>